sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:12: error: not found: value eccart
      if(plusPetit(i+eccart,i)){
                     ^AlgCombSort:13: error: not found: value eccart
        echange(i,i+eccart)
                    ^