sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var inversement=false
  var ecart=getNombreValeurs()
  do{
    if (ecart>1){
      ecart = (ecart.toDouble / 1.3).toInt
    }
    var i=0
    while (i+ecart < getNombreValeurs()){
      inversement=false
      if(plusPetit(i+eccart,i)){
        echange(i,i+eccart)
        inversement=true
      }
      i=i+1
    }
  }while( (ecart > 1)||(inversement) )
}